<resources>
    <string name="app_name">N9NE</string>
    <string name="title_activity_maps">Map</string>
    <string name="directions_api_key">AIzaSyA2YY296MqbdFz4bKX0VCvCoLlltWgCKOI</string>
    <string name="logo">logo</string>
    <string name="begin">begin</string>
    <string name="midpointLabel">Midpoint</string>
    <string name="shareLabel">Share</string>
    <string name="specialLocationLabel">Special Location</string>
    <string name="locALabel">Location A</string>
    <string name="locBLabel">Location B</string>
    <string name="settingsLabel">Settings</string>
...
